# ShoeScraper

./: .env.example  .gitignore  README.md  ja_denim_monitor.py  pyproject.toml  render.yaml  requirements.txt  run_frontend.ps1  web_app.py
config/: products.yaml
docs/superpowers/plans/: 2026-05-23-client-operations-quality.md
docs/superpowers/specs/: 2026-05-23-client-operations-quality-design.md
sneakers/: config.py  db.py  fetcher.py  matcher.py  models.py  service.py
sneakers/parsers/: __init__.py
tests/: conftest.py  test_config.py  test_db.py  test_matching.py  test_models.py  test_parser_behavior.py  test_service.py  test_web_app.py
web/: app.js  index.html  styles.css
