[project]
name = "shoe-scraper"
version = "2.0.0"
description = "Product-tracking service for monitoring sneaker availability and pricing across Australian retailers"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[project.scripts]
shoe-scraper = "sneakers.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
